// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaveReasonPage renders the page for caring leave and does not show reason qualifier followup 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <Alert
    neutral={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "mass-benefits-guide-serious-health-condition": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#what-is-a-serious-health-condition?-"
            rel="noopener"
            target="_blank"
          />,
          "p": <p />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsLeaveReason.alertBody"
    />
  </Alert>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "I can’t work due to my illness, injury, or pregnancy.",
          "value": "Serious Health Condition - Employee",
        },
        Object {
          "checked": false,
          "label": "I need to bond with my child after birth, adoption, or foster placement.",
          "value": "Child Bonding",
        },
      ]
    }
    hint="You can only request one leave at a time."
    label="Why do you need to take leave?"
    name="leave_details.reason"
    onChange={[Function]}
    type="radio"
    value="Care for a Family Member"
  />
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.reason_qualifier",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={false}
  >
    <InputChoiceGroup
      choices={
        Array [
          Object {
            "checked": false,
            "label": "Birth",
            "value": "Newborn",
          },
          Object {
            "checked": false,
            "label": "Adoption",
            "value": "Adoption",
          },
          Object {
            "checked": false,
            "label": "Foster placement",
            "value": "Foster Care",
          },
        ]
      }
      hint={
        <Details
          label="What if I’ve had multiple births or placements within one year?"
        >
          <Trans
            components={
              Object {
                "multiple-births-link": <a
                  href="https://www.mass.gov/pfml-multiple-births"
                  rel="noopener"
                  target="_blank"
                />,
              }
            }
            i18nKey="pages.claimsLeaveReason.bondingTypeMultipleBirthsDetailsSummary"
          />
        </Details>
      }
      label="Will you take leave for a birth, an adoption, or a foster placement?"
      name="leave_details.reason_qualifier"
      onChange={[Function]}
      type="radio"
      value=""
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeaveReasonPage renders the page for caring leave and does not show reason qualifier followup 2`] = `
Array [
  <p
    key="0"
  >
    To apply for the following paid benefits:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Paid family leave to care for a family member who serves in the armed forces
    </li>
    <li
      key="1"
    >
      Paid family leave to manage family affairs when a family member is on active duty in the armed forces
    </li>
  </ul>,
  <p
    key="2"
  >
    Call the Department of Family and Medical Leave Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </p>,
]
`;

exports[`LeaveReasonPage renders the page for medical leave and does not show reason qualifier followup 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <Alert
    neutral={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "mass-benefits-guide-serious-health-condition": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#what-is-a-serious-health-condition?-"
            rel="noopener"
            target="_blank"
          />,
          "p": <p />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsLeaveReason.alertBody"
    />
  </Alert>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": true,
          "label": "I can’t work due to my illness, injury, or pregnancy.",
          "value": "Serious Health Condition - Employee",
        },
        Object {
          "checked": false,
          "label": "I need to bond with my child after birth, adoption, or foster placement.",
          "value": "Child Bonding",
        },
      ]
    }
    hint="You can only request one leave at a time."
    label="Why do you need to take leave?"
    name="leave_details.reason"
    onChange={[Function]}
    type="radio"
    value="Serious Health Condition - Employee"
  />
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.reason_qualifier",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={false}
  >
    <InputChoiceGroup
      choices={
        Array [
          Object {
            "checked": false,
            "label": "Birth",
            "value": "Newborn",
          },
          Object {
            "checked": false,
            "label": "Adoption",
            "value": "Adoption",
          },
          Object {
            "checked": false,
            "label": "Foster placement",
            "value": "Foster Care",
          },
        ]
      }
      hint={
        <Details
          label="What if I’ve had multiple births or placements within one year?"
        >
          <Trans
            components={
              Object {
                "multiple-births-link": <a
                  href="https://www.mass.gov/pfml-multiple-births"
                  rel="noopener"
                  target="_blank"
                />,
              }
            }
            i18nKey="pages.claimsLeaveReason.bondingTypeMultipleBirthsDetailsSummary"
          />
        </Details>
      }
      label="Will you take leave for a birth, an adoption, or a foster placement?"
      name="leave_details.reason_qualifier"
      onChange={[Function]}
      type="radio"
      value=""
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeaveReasonPage renders the page for medical leave and does not show reason qualifier followup 2`] = `
Array [
  <p
    key="0"
  >
    To apply for the following paid benefits:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Paid family leave to care for a family member who serves in the armed forces
    </li>
    <li
      key="1"
    >
      Paid family leave to manage family affairs when a family member is on active duty in the armed forces
    </li>
  </ul>,
  <p
    key="2"
  >
    Call the Department of Family and Medical Leave Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </p>,
]
`;
